fix: Checkbox overlaps the note in Todo component

--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -36,6 +36,7 @@
 .note {
   font-size: 1.5rem;
   font-weight: 400;
+  margin-inline-end: 2.5rem;
 }
 
 .icon {
